// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders column_width properly 1`] = `
<div
  className="sc-bdVaJa iOpAjh"
>
  <div
    className="sc-bwzfXH jTXFN"
  >
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>Hello, world!</p>",
        }
      }
    />
  </div>
</div>
`;

exports[`renders fillwidth properly 1`] = `
<div
  className="sc-bdVaJa eCEkWF"
>
  <div
    className="sc-bwzfXH jTXFN"
  >
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>Hello, world!</p>",
        }
      }
    />
  </div>
</div>
`;

exports[`renders overflow_fillwidth properly 1`] = `
<div
  className="sc-bdVaJa dGifUw"
>
  <div
    className="sc-bwzfXH jTXFN"
  >
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>Hello, world!</p>",
        }
      }
    />
  </div>
</div>
`;
